--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <p>We may update this Privacy Policy from time to time. Any changes will be posted in the app or on this page.</p>
 
         <h2>7. Contact Us</h2>
-        <p>For any questions about this Privacy Policy, contact us at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        <p>For any questions about this Privacy Policy, contact us at: <a href="mailto:mobdeveloper00@gmail.com">mobdeveloper00@gmail.com</a></p>
     </div>
 </body>
 </html>
